--- a/core/css/mobile.scss
+++ b/core/css/mobile.scss
@@ -132,8 +132,7 @@
 }
 
 @media only screen and (max-width: 480px) {
-	#header .header-left > nav > .menu,
-	#header .header-right > div > .menu {
+	#header .header-right > nav > .menu {
 		max-width: calc(100vw - 10px);
 		position: fixed;
 		&::after {
